# bevy-mpm

./: Cargo.toml  README.md
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benches/: memory_benchmark.rs  simple_benchmarks.rs
examples/: basic_mpm.rs  memory_test.rs
src/: bukkit.rs  constants.rs  constraints.rs  g2p.rs  grid.rs  lib.rs  main.rs  math.rs  p2g.rs  particle.rs  pbmpm.rs  simulation.rs
src/config/: constants.rs  mod.rs  solver_params.rs
src/core/: grid.rs  kernel.rs  mod.rs  mpm_state.rs  particle.rs  particle_set.rs
src/geometry/: mod.rs  sp_grid.rs
src/materials/: families.rs  material_types.rs  mod.rs  utils.rs
src/materials/fluid/: mod.rs  physics.rs  water.rs
src/materials/fluids/: water.rs
src/materials/granular/: mod.rs  sand.rs
src/materials/solid/: elastic.rs  mod.rs
src/materials/solids/: mod.rs
src/solver/: g2p.rs  grid_update.rs  mod.rs  p2g.rs  particle.rs
