[package]
name = "mpm2d"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.0", features = ["dynamic_linking"] }
rand = "0.9"
indexmap = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Release optimizations for maximum performance
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "memory_benchmark"
harness = false
